# glossy-rs

./: Cargo.toml  README.md
src/: main.rs
src/server/: server.rs
src/types/: domain.rs  mod.rs
