[package]
name = "glossy"
version = "0.1.0"
authors = ["vincent <adoyee@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version="1.7.0", features=["attributes"]}
async-h1 = "2.1.4"
futures = "*"
